# dub-oxide

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
dub-oxide/: Cargo.toml
dub-oxide/src/: error.rs  lib.rs  opts.rs  result.rs
dub-oxide/src/formats/: aiff.rs  common.rs  mod.rs  wav.rs
dub-oxide/tests/: integration_tests.rs
encoders/aiff/: Cargo.toml  README.md
encoders/aiff/examples/: symphonia.rs
encoders/aiff/src/: extended.rs  lib.rs
