[package]
name = "dub-oxide"
version = "0.0.0"
edition = "2024"

[dependencies]
hound = "3.5.1"
num = "0.4.3"
symphonia = "0.5.4"
tracing = { version = "0.1.41", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
aiff = ["symphonia/aiff"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
